k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: upstream-transacation-service
spec:
  selector:
    app: upstream-transacation
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: ClusterIP #LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upstream-transacation
spec:
  selector:
    matchLabels:
      app: upstream-transacation
  replicas: 1
  template:
    metadata:
      labels:
        app: upstream-transacation
    spec:
      containers:
      - name: upstream-transacation
        image: us-central1-docker.pkg.dev/symbolic-object-438415-j5/arul-gcr/transcations:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: gcr-io

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: py-ingress-proxy
spec:
  virtualhost:
    fqdn: "upstream-transacation.arullab.com"
    tls:
      secretName: upstream-transacation-secret
  routes:
   - conditions:
     - prefix: ""
     services:
       - name: upstream-transacation-service
         port: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upstream-transacation
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-contour #letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: upstream-transacation
    hosts:
    - upstream-transacation.arullab.com
  rules:
  - host: upstream-transacation.arullab.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: upstream-transacation-service
            port:
              number: 8080
