k8s/loader-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: loader-transacation-service
spec:
  selector:
    app: loader-transacation
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: ClusterIP #LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader-transacation
spec:
  selector:
    matchLabels:
      app: loader-transacation
  replicas: 1
  template:
    metadata:
      labels:
        app: loader-transacation
    spec:
      containers:
      - name: loader-transacation
        image: us-central1-docker.pkg.dev/symbolic-object-438415-j5/arul-gcr/transcation-loader:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: gcr-io

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: py-ingress-proxy
spec:
  virtualhost:
    fqdn: "loader-transacation.arullab.com"
    tls:
      secretName: loader-transacation-secret
  routes:
   - conditions:
     - prefix: ""
     services:
       - name: loader-transacation-service
         port: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loader-transacation
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-contour #letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - secretName: loader-transacation
    hosts:
    - loader-transacation.arullab.com
  rules:
  - host: loader-transacation.arullab.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loader-transacation-service
            port:
              number: 8080
